--- a/color.css
+++ b/color.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&display=swap');
 :root {
     --Lime: hsl(61, 70%, 52%);
+    --light-lime: hsl(61, 70%, 80%);
     --Red: hsl(4, 69%, 50%);
 
     --White: hsl(0, 0%, 100%);
@@ -8,6 +10,7 @@
     --Slate-500: hsl(200, 26%, 54%);
     --Slate-700: hsl(200, 24%, 40%);
     --Slate-900: hsl(202, 55%, 16%);
+    --Slate-1000: hsl(202, 55%, 12%);
 }
 
 * {
@@ -17,36 +20,291 @@
 }
 
 body {
-    height: 100vh;
+    min-height: 100vh;
     background-color: var(--Slate-100);
     display: grid;
     place-items: center;
+    font-family: "Plus Jakarta Sans", sans-serif;
 }
 
-.container {
-    width: 700px;
-    min-height: 480px;
-    display: flex;
+img, svg {
+    max-width: 100%;
+    display: block;
+}
+
+label {
+    width: 100%;
+    display: block;
+    margin-bottom: .5rem;
+}
+
+button {
+    cursor: pointer;
+}
+
+input[type=number] {
+    padding: .75rem 1rem;
+    width: 100%;
+    font-size: 1.4rem;
+    color: var(--Slate-700);
+    border: 0;
+    outline: 0;
+}
+
+input[type=radio] {
+    appearance: none;
+    width: .5rem;
+    height: .5rem;
+    outline: 2px solid var(--Slate-900);
+    margin-right: .5rem;
+    outline-offset: 3px;
+    border-radius: 50%;
+}
+
+input[type=radio]:checked {
+    background-color: var(--Lime);
+    outline: 2px solid var(--Lime);
+}
+
+.mortgage-calculator {
+    max-width: 1200px;
     background-color: var(--White);
-    border-radius: 20px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    border-radius: 2rem;
+    overflow: hidden;
+}
+.mortgage-calculator > * {
+    padding: 2rem;
 }
 
-.right, .left {
-    flex: 1;
+.mortgage-calculator .left {
+    color: var(--Slate-900);
+    font-weight: 700;
 }
 
-.right {
-    position: relative;
-    padding: 20px;
+.mortgage-calculator .left label {
+    color: var(--Slate-500);
 }
 
-.right a {
-    position: absolute;
-    top: 25px;
-    right: 25px;
+.mortgage-calculator .left .header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 5rem;
+}
+
+.mortgage-calculator .left .header button {
+    border: 0;
     color: var(--Slate-300);
+    background-color: transparent;
+    font-size: 1.2rem;
+    text-decoration: underline;
+    padding: .25rem .5rem;
 }
 
-form {
-    margin: 25px 0 15px;
+.mortgage-calculator .left .header button:hover {
+    color: var(--Slate-700);
+}
+
+.form-item {
+    margin-bottom: 2.5rem;
+    position: relative;
+}
+
+.form-symbol {
+    color: var(--Slate-900);
+    background-color: var(--Slate-100);
+    padding: 1rem ;
+}
+
+.form-flex {
+    display: flex;
+    align-items: center;
+    border: 1px solid var(--Slate-300);
+}
+
+.form-flex.error .form-symbol {
+    color: var(--White);
+    background-color: var(--Red);
+}
+
+.form-flex:hover {
+    border-color: var(--Slate-900);
+}
+
+.form-flex:focus-within {
+    border-color: var(--Lime);
+}
+
+.form-flex:focus-within .form-symbol {
+    background-color: var(--light-lime);
+}
+
+.form-col {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 2rem;
+}
+.form-col .form-item {
+    margin-bottom: 0;
+}
+
+.radio-inputs {
+    display: flex;
+    align-items: center;
+    gap: .5rem;
+    padding: .75rem;
+    border: 1px solid var(--Slate-300);
+    margin-top: .75rem;
+    cursor: pointer;
+}
+
+.radio-inputs > * {
+    cursor: pointer;
+}
+
+.radio-inputs label {
+    margin-bottom: 0;
+    font-size: 1.1rem;
+}
+
+.radio-inputs.selected {
+    border-color: var(--Lime);
+    background-color: var(--light-lime);
+}
+.form-alert {
+    color: var(--Red);
+    position: absolute;
+    bottom: -20px;
+    display: none;
+}
+
+.mortgage-calculator .left .calculate-btn {
+    border: 0;
+    background-color: var(--Lime);
+    color: var(--Slate-900);
+    padding: .75rem 2rem;
+    display: flex;
+    align-items: center;
+    font-size: 1.2rem;
+    font-weight: 700;
+    gap: .5rem;
+    border-radius: 2rem;
+}
+
+.mortgage-calculator .left .calculate-btn:hover {
+    background-color: var(--light-lime);
+}
+
+.mortgage-calculator .right {
+    background-color: var(--Slate-900);
+    border-radius: 0 0 0 4rem;
+}
+
+
+.mortgage-calculator .right .default-text {
+    margin-top: 5rem;
+    color: var(--White);
+    text-align: center;
+}
+
+.mortgage-calculator .right .default-text img {
+    margin: auto;
+}
+
+.mortgage-calculator .right .default-text h2 {
+    margin:  2rem 0 1rem;
+}
+.mortgage-calculator .right .default-text p {
+    color: var(--Slate-500);
+}
+
+.mortgage-calculator .right .default-text.hide {
+    display: none;
+}
+
+.mortgage-calculator .right .calculation-container {
+    display: none;
+}
+
+.mortgage-calculator .right .calculation-container.show {
+    display: block;
+}
+
+.mortgage-calculator .right .calculation-container h2 {
+    color: var(--White);
+    margin-bottom: 1rem;
+}
+
+.mortgage-calculator .right .calculation-container p {
+    color: var(--Slate-500);
+}
+
+.mortgage-calculator .right .calculation-container .calculation {
+    margin-top: 2rem;
+    background-color: var(--Slate-1000);
+    padding: 1.5rem;
+    border-top: 4px solid var(--Lime);
+    border-radius: .5rem;
+}
+
+.mortgage-calculator .right .calculation-container .calculation p {
+    margin-bottom: 1rem;
+}
+
+
+.right .calculation-container .calculation .monthly-repayment {
+    color: var(--Lime);
+    font-size: 4rem;
+    font-weight: 700;
+}
+
+.right .calculation-container .calculation .line {
+    width: 100%;
+    height: 1px;
+    background-color: var(--Slate-900);
+    margin: 2rem 0;
+}
+
+.right .calculation-container .calculation .term-result {
+    color: var(--White);
+    font-weight: 700;
+    font-size: 2rem;
+}
+
+@media (max-width: 800px) {
+    .mortgage-calculator {
+        margin: 2rem;
+        grid-template-columns: 1fr;
+    }
+    .mortgage-calculator .right .default-text {
+        margin-top: 3rem;
+    }
+    .mortgage-calculator .right {
+        border-radius: initial;
+    }
+}
+
+@media (max-width: 540px) {
+    .mortgage-calculator {
+        margin: 0;
+        border-radius: initial;
+    }
+    .mortgage-calculator .left .header {
+        display: block;
+        margin-bottom: 2rem;
+    }
+    .mortgage-calculator .left .header button {
+        margin-top: .75rem;
+        padding: .25rem 0;
+    }
+    .form-col {
+        grid-template-columns: 1fr;
+    }
+
+    .calculate-btn {
+        width: 100%;
+        justify-content: center;
+    }
 }
